- Profiles link in admin menu is lowercase (#10050).  - Spelling correction for Arial font in CSS file.  - Links in HTML head for "next", "prev" posts showing unpublished/invisible posts. (1.5.1.8)

--- a/BlogEngine/BlogEngine.NET/themes/Standard/style.css
+++ b/BlogEngine/BlogEngine.NET/themes/Standard/style.css
@@ -1,5 +1,5 @@
 ﻿body, textarea, table, tr, td{
-		font-family: calibri, aria;
+		font-family: calibri, arial;
 		font-size: 11pt;
 }
 
